# DeltaPractice

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.org  roadmap.org
DeltaPractice/: DeltaPractice.sln  UpgradeLog.htm
DeltaPractice/Backup/: DeltaPractice.sln
DeltaPractice/MainApp/: App.xaml  App.xaml.cs  MainApp.csproj  MainWindow.xaml  MainWindow.xaml.cs
DeltaPractice/core/: Class1.cs  core.csproj
DeltaPractice/core/classes/: IRecalculable.cs  Practice.cs  Problem.cs  Variables.cs
DeltaPractice/core/classes/context/: Context.cs  ContextImage.cs  ContextText.cs
DeltaPractice/core/classes/questions/: AQuestion.cs  ContainerQuestions.cs  QuestionTextBox.cs
DeltaPractice/core/classes/variables/: AVariable.cs  ContainerVariables.cs  IVariable.cs  VariableChoice.cs  VariableDecimal.cs  VariableInteger.cs
DeltaPractice/core/utils/: FileUtils.cs  TextUtils.cs
DeltaPractice/mainApp/Models/: Enums.cs
DeltaPractice/mainApp/Models/Services/: DialogService.cs
DeltaPractice/mainApp/Services/Dialogs/: DialogService.cs  IDialogService.cs
DeltaPractice/mainApp/ViewModels/Dialogs/: CreatePracticeViewModel.cs  CreateProblemViewModel.cs  NewItemDialogViewModel.cs
DeltaPractice/mainApp/ViewModels/Problems/: ProblemViewModel.cs
DeltaPractice/mainApp/ViewModels/Windows/: MainViewModel.cs  PracticeViewModel.cs  ProblemViewModel.cs
DeltaPractice/mainApp/Views/Dialogs/: CreatePracticeDialog.xaml  CreatePracticeDialog.xaml.cs  CreateProblemDialog.xaml  CreateProblemDialog.xaml.cs  NewItemDialogWindow.xaml  NewItemDialogWindow.xaml.cs
DeltaPractice/tests/: TestFileUtils.cs  TestQuestions.cs  TestVariables.cs  tests.csproj
directory/practice/: problem1.css  problem1.html  problem1.js
directory/practice/problem1/: problem.html  user-script.js
include/: AppDelta.hpp  DeltaApp.hpp  DeltaFrame.hpp  DeltaMain.hpp  FrameCreateProblem.hpp  FrameHome.hpp  FrameStartSession.hpp  custom_events.hpp  ids_enum.hpp
include/home/: FrameHome.hpp  FrameStartPracticeSession.hpp
include/practice/: FramePractice.hpp  PageProblem.hpp
src/: AppDelta.cpp  DeltaApp.cpp  DeltaFrame.cpp  DeltaMain.cpp  FrameCreateProblem.cpp  FrameHome.cpp  FramePractice.cpp  FrameStartSession.cpp  custom_events.cpp
src/home/: FrameHome.cpp  FrameStartPracticeSession.cpp
src/practice/: FramePractice.cpp  PageProblem.cpp
(+9 files in other folders)
